[gd_scene load_steps=15 format=3 uid="uid://s334ukp7rbmp"]

[ext_resource type="Script" path="res://arcade_hall/scripts/arcade_scene.gd" id="1_y63dw"]
[ext_resource type="Texture2D" uid="uid://c6y8ffufl3m4p" path="res://sprites/backgrounds/400x240_arcade_hall_no_ducks.png" id="2_r6ovr"]
[ext_resource type="Texture2D" uid="uid://wxpar3hl0b8f" path="res://sprites/dialogue/dialogue_box1.png" id="3_y2btf"]
[ext_resource type="Script" path="res://arcade_hall/scripts/start_dialogue.gd" id="4_cmwwq"]
[ext_resource type="PackedScene" uid="uid://d0rlgj3n6frbj" path="res://game/scenes/game_world.tscn" id="5_dujpy"]
[ext_resource type="FontFile" uid="uid://dvfag37de6n4k" path="res://fonts/upheavtt.ttf" id="6_1f1bc"]
[ext_resource type="Texture2D" uid="uid://baaykaesbk81j" path="res://sprites/dialogue/date_duck_dialogue.png" id="7_fp8l4"]
[ext_resource type="Texture2D" uid="uid://cglaiquc7dooo" path="res://sprites/dialogue/dialogue_box2.png" id="8_cv7yy"]
[ext_resource type="Texture2D" uid="uid://doyto3d510xcx" path="res://sprites/dialogue/gamer_duck_dialogue.png" id="9_utfbn"]
[ext_resource type="Script" path="res://arcade_hall/scripts/answer_manager.gd" id="10_6uwpl"]
[ext_resource type="Script" path="res://arcade_hall/scripts/rich_text_label.gd" id="11_15y7n"]
[ext_resource type="Texture2D" uid="uid://oxwl4pypgp5w" path="res://sprites/backgrounds/date_duck.png" id="12_a1brw"]
[ext_resource type="Texture2D" uid="uid://bjptb0ep7s6fm" path="res://sprites/backgrounds/gamer_duck.png" id="13_hbjb2"]
[ext_resource type="PackedScene" uid="uid://dej60n20usx1b" path="res://game/scenes/fade_in_black.tscn" id="14_ni8dn"]

[node name="ArcadeScene" type="Node2D"]
script = ExtResource("1_y63dw")

[node name="400x240ArcadeHallNoDucks" type="Sprite2D" parent="."]
position = Vector2(200, 120)
texture = ExtResource("2_r6ovr")

[node name="Dialogue" type="Sprite2D" parent="."]
position = Vector2(200, 272)
texture = ExtResource("3_y2btf")
script = ExtResource("4_cmwwq")
game_scene = ExtResource("5_dujpy")

[node name="DialogueText" type="RichTextLabel" parent="Dialogue"]
z_index = 10
offset_left = -130.0
offset_top = -24.0
offset_right = 131.0
offset_bottom = 23.0
theme_override_fonts/normal_font = ExtResource("6_1f1bc")
theme_override_font_sizes/normal_font_size = 10

[node name="FemaleDialogueBox" type="Sprite2D" parent="Dialogue"]
texture = ExtResource("3_y2btf")

[node name="Sprite2D" type="Sprite2D" parent="Dialogue/FemaleDialogueBox"]
position = Vector2(-163, 0)
texture = ExtResource("7_fp8l4")

[node name="MaleDialogueBox" type="Sprite2D" parent="Dialogue"]
texture = ExtResource("8_cv7yy")

[node name="Sprite2D" type="Sprite2D" parent="Dialogue/MaleDialogueBox"]
position = Vector2(168, 0)
texture = ExtResource("9_utfbn")

[node name="AnswersContainer" type="BoxContainer" parent="Dialogue" node_paths=PackedStringArray("answer_label_1", "answer_label_2", "answer_label_3")]
offset_left = -122.0
offset_top = -29.0
offset_right = 133.0
offset_bottom = 31.0
vertical = true
script = ExtResource("10_6uwpl")
answer_label_1 = NodePath("Answer1")
answer_label_2 = NodePath("Answer2")
answer_label_3 = NodePath("Answer3")

[node name="Answer1" type="RichTextLabel" parent="Dialogue/AnswersContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_1f1bc")
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
fit_content = true
meta_underlined = false
script = ExtResource("11_15y7n")

[node name="Answer2" type="RichTextLabel" parent="Dialogue/AnswersContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_1f1bc")
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
fit_content = true
meta_underlined = false
script = ExtResource("11_15y7n")

[node name="Answer3" type="RichTextLabel" parent="Dialogue/AnswersContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_1f1bc")
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
fit_content = true
meta_underlined = false
script = ExtResource("11_15y7n")

[node name="ZoomInPoint" type="Node2D" parent="Dialogue"]
position = Vector2(100, -92)

[node name="FadeOutBlackShader" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="DateDuck" type="Sprite2D" parent="."]
position = Vector2(273, 201)
texture = ExtResource("12_a1brw")

[node name="GamerDuck" type="Sprite2D" parent="."]
position = Vector2(306, 201)
texture = ExtResource("13_hbjb2")

[node name="FadeInBlackShader" parent="." instance=ExtResource("14_ni8dn")]
